Development
-----------
- pmount-hal: minor change to build with dbus 0.91

0.9.12
------
- fix pmount.allow parsing regular expression (it failed in some ISO locales)
- pmount-hal: honour iocharset mount option from hal policy
- pmount-hal: replace slashes with underscores in label
- pmount: mount UDF with default umask 000, so that the UDF permissions are not
  altered
- check for HAL libraries at configure time and conditionally build pmount-hal
- add configure options for external programs and paths, so that policy.h does
  not need to be altered for installation customizations any more
- update translations from Rosetta

0.9.11
------
- pmount: refuse to mount devices to a mount point that is already in
  /etc/fstab
- pmount-hal: Do not try mount non-fstab devices to fstab mountpoints
- update translations from Rosetta

0.9.10
------
- pmount-hal: fix parsing of hal's mount options
- pmount-hal: directly call mount for devices in /etc/fstab
- pmount-hal.1: document PMOUNT_DEBUG environment variable

0.9.9
-----
- mention MMC devices in pmount man page
- pmount-hal: fix crash for label-less volumes with hal 0.5.7
- pmount-hal: fix handling of empty labels with hal 0.5.7

0.9.8
-----
- Add reiser4 to the list of supported file systems.
- pmount-hal: fall back to plain volume.fstype and volume.label hal properties
  if policy does not exist; this makes pmount work with hal 0.5.7 and above
- pmount-hal: check for PMOUNT_DEBUG environment variable to enable debugging
- pmount: allow mounting of mmc cards
- updated translations from Rosetta

0.9.7
-----
- pmount: mount vfat with shortname=mixed option for better WinXP compatibility
- fix configure check to work with libsysfs versions 1.3 and 2.0
- pmount, pumount: do not link against dbus and hal libraries
- pmount, pumount: support --version argument
- pmount: automatically prepend /dev to device argument if it is missing

0.9.6
-----
- pmount-hal: support device argument