@@ -1,6 +1,9 @@
 Development
 -----------
 - pmount-hal: minor change to build with dbus 0.91
+- pmount: if pmount is installed setgid, use pmount's group for gid mount
+  option, otherwise use the user's group, as usual (patch from Wilhelm Meier
+  <wilhelm.meier@fh-kl.de>)
 
 0.9.12
 ------
